force-app/main/default/objects/Feedback_Rating__c/Feedback_Rating__c.object-meta.xml
<CustomObject>
    <description
  >A single 1-10 score given in a feedback survey - one row per rated hotel, golf course, flight, transfer or rental car, plus hotel sub-category scores. Normalised so a trip with more items needs no schema change.</description>
    <label>Feedback Rating</label>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Rating Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>