force-app/main/default/objects/Feedback_Rating__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description
  >Which part of the trip this score is about. Mirrors Reservation__c.AccountType__c, which is the populated discriminator on the itinerary (Type__c is unused).</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Golfclub</fullName>
                <label>Golf Course</label>
            </value>
            <value>
                <fullName>Airline</fullName>
                <label>Flight</label>
            </value>
            <value>
                <fullName>TransferCompany</fullName>
                <label>Transfer / Chauffeur</label>
            </value>
            <value>
                <fullName>CarRentalCompany</fullName>
                <label>Rental Car</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>