force-app/main/default/objects/Feedback_Rating__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description
  >Follow-up comment, captured when the score is 8 or below.</description>
    <label>Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>