force-app/main/default/objects/Feedback_Rating__c/fields/Feedback_Response__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Response__c</fullName>
    <description>The submission this score belongs to.</description>
    <label>Feedback Response</label>
    <referenceTo>Feedback_Response__c</referenceTo>
    <relationshipLabel>Feedback Ratings</relationshipLabel>
    <relationshipName>Feedback_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>