force-app/main/default/objects/Feedback_Rating__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description
  >Name of the rated item as shown to the guest, snapshotted at submission time so the record still reads correctly if the Account or Service is later renamed.</description>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>