force-app/main/default/objects/Feedback_Rating__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The itinerary line item that was rated. Makes "average score for this hotel or golf club" reportable by joining through Reservation__c.Travel_Location__c. Null for ratings that are not tied to a single reservation.</description>
    <label>Reservation</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Feedback Ratings</relationshipLabel>
    <relationshipName>Feedback_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>