force-app/main/default/objects/Feedback_Rating__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description
  >The 1-10 score. Re-validated server-side; never trusted from the client.</description>
    <label>Score</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>