force-app/main/default/objects/Feedback_Rating__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description
  >Set only for hotel sub-ratings, which the survey reveals when the overall hotel score is below 9. Null on top-level ratings.</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Room</fullName>
                <label>Zimmer / Room</label>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
                <label>Gastronomie / Catering</label>
            </value>
            <value>
                <fullName>Cleanliness</fullName>
                <label>Sauberkeit / Cleanliness</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>