force-app/main/default/objects/Feedback_Rating__c/listViews/All_Ratings.listView-meta.xml
<ListView>
    <fullName>All_Ratings</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Score__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Ratings</label>
</ListView>